# BUAA-MIPS-Compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Require.txt  main.cpp  mips1.asm
backend/: Mips.cpp  Mips.h  SymbolMap.cpp  SymbolMap.h
code/: Assert.cpp  Assert.h  Error.h  Lexer.cpp  Mips.cpp  Mips.h  Parser.cpp  Parser.h  SymbolMap.cpp  SymbolMap.h  babasics.h  main.cpp
docs/: 中间代码存储格式.csv  符号表设计.txt
frontend/: Assert.cpp  Assert.h  Error.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Token.cpp  Token.h  basics.h
testcase/: base_test.txt  fibonacci.txt  matrix.txt  speed.txt  testfile1.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile7.txt  testfile_condition.txt  testfile_merge.txt
